--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="loading.css" />
         <link rel="stylesheet" href="statistic.css" />
         <link rel="stylesheet" href="profile.css" />
-        <link rel="stylesheet" href="metaball.css" />
+        <link rel="stylesheet" href="./css/metaball.css" />
 
         <script src="./script.js" defer></script>
     </head>
@@ -165,7 +165,7 @@
                     <div class="blubb-6"></div>
                     <div class="blubb-7"></div>
                     <div class="blubb-8"></div>
-                    <div class="sparkle-1"></div>
+                    <!--<div class="sparkle-1"></div>
                     <div class="sparkle-2"></div>
                     <div class="sparkle-3"></div>
                     <div class="sparkle-4"></div>
@@ -174,7 +174,7 @@
                     <div class="sparkle-7"></div>
                     <div class="sparkle-8"></div>
                     <div class="sparkle-9"></div>
-                    <div class="sparkle-10"></div>
+                    <div class="sparkle-10"></div>-->
                 </div>
             </div>
         </div>
