--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html>
     <head>
         <title>css challenge</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="pyramide.css" />
+
         <link rel="stylesheet" href="loading.css" />
         <link rel="stylesheet" href="statistic.css" />
         <link rel="stylesheet" href="profile.css" />
         <link rel="stylesheet" href="./css/metaball.css" />
+        <link rel="stylesheet" href="./css/rainynight.css" />
+        <link rel="stylesheet" href="./css/watcher.css" />
+        <link rel="stylesheet" href="./css/walkingboots.css" />
+        <link rel="stylesheet" href="./css/tooltip.css" />
+        <link rel="stylesheet" href="./css/gallery.css" />
+
 
         <script src="./script.js" defer></script>
     </head>
@@ -165,7 +175,7 @@
                     <div class="blubb-6"></div>
                     <div class="blubb-7"></div>
                     <div class="blubb-8"></div>
-                    <!--<div class="sparkle-1"></div>
+                    <div class="sparkle-1"></div>
                     <div class="sparkle-2"></div>
                     <div class="sparkle-3"></div>
                     <div class="sparkle-4"></div>
@@ -174,7 +184,157 @@
                     <div class="sparkle-7"></div>
                     <div class="sparkle-8"></div>
                     <div class="sparkle-9"></div>
-                    <div class="sparkle-10"></div>-->
+                    <div class="sparkle-10"></div>
+                </div>
+            </div>
+            <div class="grid_item">
+                <div class="rainynight">
+                    <div class="animation">
+                        <div class="moon">
+                            <div class="crater-1"></div>
+                            <div class="crater-2"></div>
+                            <div class="crater-3"></div>
+                            <div class="crater-4"></div>
+                            <div class="crater-5"></div>
+                            <div class="crater-6"></div>
+                            <div class="crater-7"></div>
+                            <div class="crater-8"></div>
+                            <div class="crater-9"></div>
+                            <div class="crater-10"></div>
+                            <div class="crater-l1"></div>
+                        </div>
+                        <div class="hill-1"></div>
+                        <div class="hill-2"></div>
+                        <div class="hill-3"></div>
+                        <div class="hill-4"></div>
+                        <div class="hill-5"></div>
+                        <div class="drop-big-1"></div>
+                        <div class="drop-big-2"></div>
+                        <div class="drop-big-3"></div>
+                        <div class="drop-big-4"></div>
+                        <div class="drop-big-5"></div>
+                        <div class="drop-big-6"></div>
+                        <div class="drop-big-7"></div>
+                        <div class="drop-big-8"></div>
+                        <div class="drop-big-9"></div>
+                        <div class="drop-big-10"></div>
+                        <div class="drop-medium-1"></div>
+                        <div class="drop-medium-2"></div>
+                        <div class="drop-medium-3"></div>
+                        <div class="drop-medium-4"></div>
+                        <div class="drop-medium-5"></div>
+                        <div class="drop-medium-6"></div>
+                        <div class="drop-medium-7"></div>
+                        <div class="drop-medium-8"></div>
+                        <div class="drop-medium-9"></div>
+                        <div class="drop-medium-10"></div>
+                        <div class="drop-small-1"></div>
+                        <div class="drop-small-2"></div>
+                        <div class="drop-small-3"></div>
+                        <div class="drop-small-4"></div>
+                        <div class="drop-small-5"></div>
+                        <div class="drop-small-6"></div>
+                        <div class="drop-small-7"></div>
+                        <div class="drop-small-8"></div>
+                        <div class="drop-small-9"></div>
+                        <div class="drop-small-10"></div>
+                    </div>
+                    <div class="detail">
+                        <span class="temperature">
+                                  12°
+                        </span>
+                        <div class="info">
+                            Wind: E 7 km/h<br>
+                                Humidity: 87%
+                        </div>
+                        <table class="past">
+                            <tbody>
+                                <tr>
+                                    <td>Tue</td>
+                                    <td>21° / 9°</td>
+                                </tr>
+                                <tr>
+                                    <td>WED</td>
+                                    <td>23° / 10°</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_item">
+                <div class="watch_container">
+                    <div class="watch">
+                        <div class="spin"></div>
+                        <div class="indexes"></div>
+                        <div class="date">Mon 15 Jan 2015</div>
+                        <div class="time">11:42</div>
+                        <div class="beat"><span></span>81</div>
+                        <div class="energy">1248cal</div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_item">
+                <div class="walkingboots_container">
+                    <div class="floor"></div>
+                    <div class="invisible-man">
+                        <div class="leg left"><div class="shoe"></div></div>
+                        <div class="leg right">
+                            <div class="shoe"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_item">
+                <div class="tooltip_container">
+                    <div class="quote">
+                        <p> know quite certainly that I myself have no special talent; curiosity,
+                            <span class="tooltip">
+                                absessions<span class="info">
+                                    <span class="pronounce">
+                                        [əbˈseʃ(ə)n]
+                                        <span class="fa fa-volume-up"></span>
+                                    </span>
+                                    <span class="text">
+                                        <b>Obsession</b>, a persistent disturbing preoccupation with an often unreasonable idea or feeling.
+                                    </span>
+                                </span>
+                            </span>
+                            and dogged endurance, combined with self-criticism have brought me to my ideas.</p>
+                        <div class="author">Albert Einstein</div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_item">
+                <div class="gallery_container">
+                    <div class="image">
+                        <img src="https://100dayscss.com/codepen/13-1.jpg">
+                        <div class="plus"></div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="image">
+                        <img src="https://100dayscss.com/codepen/13-2.jpg">
+                        <div class="plus"></div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="image">
+                        <img src="https://100dayscss.com/codepen/13-3.jpg">
+                        <div class="plus"></div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="image">
+                        <img src="https://100dayscss.com/codepen/13-4.jpg">
+                        <div class="plus"></div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="detail">
+                        <div class="close"></div>
+                       <img class='header' src='https://100dayscss.com/codepen/13-1-header.jpg'>
+                        <div class="avatar">
+                            <img src="https://100dayscss.com/codepen/13-1.jpg">
+                        </div>
+                        <div class="info"></div>
+                    </div>
                 </div>
             </div>
         </div>
